Empty flexbox with `flex-direction: *-reverse`, `overflow: auto`, and non-zero padding is overflown
Categories
(Core :: Layout: Flexbox, defect)
Tracking
()
Tracking | Status | |
---|---|---|
firefox-esr78 | --- | unaffected |
firefox88 | --- | unaffected |
firefox89 | --- | wontfix |
firefox90 | --- | fixed |
People
(Reporter: xofe_bugzilla, Assigned: TYLin)
References
(Regression)
Details
(Keywords: regression)
Attachments
(2 files)
An flexbox element is overflown where all the following are true:
- it is empty
flex-direction
isrow-reverse
orcolumn-reverse
overflow
isauto
padding
is not zero
If flex-direction
is row
or column
(i.e. not a *-reverse
value), there is no overflow. If there is any children (for example, a text node containing single letter A
), there is no overflow.
I've included a testcase with four empty div
s, each with a different flex-direction
value, that shows the issue.
I would expect no overflow if the element is empty, even if the flex-direction
is a *-reverse
value.
Reproducible in v89 beta 14, v90 build 20210522213852.
mozregression bisect says bug 1697349 is responsible.
Thanks to anyone who takes a look!
Assignee | ||
Comment 1•4 years ago
|
||
Thanks for the report and the testcase. I'll take a look.
Updated•4 years ago
|
Updated•4 years ago
|
Comment 2•4 years ago
|
||
Set release status flags based on info from the regressing bug 1697349
Updated•4 years ago
|
Assignee | ||
Comment 3•4 years ago
|
||
The rect flexItemMarginBoxBounds
is initialized at position (0, 0),
not the flex container's content-box origin. Inflating its initial value
with flex container's padding is just wrong.
Updated•4 years ago
|
Updated•4 years ago
|
Assignee | ||
Comment 4•4 years ago
|
||
The patch is simple, and I'd like to uplift it to beta to fix the regression.
Comment 5•4 years ago
|
||
We are past betas and have already built our RC, I am not wontfixing ot for 89 as I may take a patch in a potential dot release or as a ride along to an RC2 if we have one.
Comment 8•4 years ago
|
||
bugherder |
Updated•4 years ago
|
Description
•