Bug 1712496 - Adjust flex container's overflow area only if there are flex items. r=dholbert

The rect `flexItemMarginBoxBounds` is initialized at position (0, 0),
not the flex container's content-box origin. Inflating its initial value
with flex container's padding is just wrong.

Differential Revision: https://phabricator.services.mozilla.com/D115854